# program-evolution

./: Entropy Epoch 0  Entropy Epoch 15  Entropy Epoch 25  Epoch 0  Factorial Epoch 0  Factorial Epoch 200  README.md  Sort Epoch 0  Sort Epoch 200  Sort Epoch 300  Sort Epoch 50  combinator.py  entropy.py  evolve_sage_create.py  evolve_sage_optimize.py  factorial.py  factorial.sg  factorial.vm.sg  graph.py  sage.py  sort.py  sort.sg  sort.vm.sg  test.py  tree_example.py  tree_example2.py  turing.py
assets/: Epoch 100  Epoch 200  Epoch 300  Epoch 50  Factorial Epoch 100  Factorial Epoch 300  Factorial Epoch 50  Sort Epoch 100
factorial/: 100.txt  101.txt  102.txt  103.txt  11.txt  110.txt  111.txt  113.txt  116.txt  119.txt  122.txt  129.txt  13.txt  136.txt  14.txt  15.txt  154.txt  16.txt  164.txt  188.txt  2.txt  200.txt  209.txt  21.txt  212.txt  214.txt  215.txt  217.txt  218.txt  22.txt  228.txt  24.txt  25.txt  26.txt  27.txt  274.txt  28.txt  288.txt  29.txt  292.txt  (+39 more)
ski/: Cargo.toml  main.rs
ski/src/: lib.rs
ski/src/combinator/: mod.rs
sort/: 0.txt  1.txt  10.txt  101.txt  103.txt  104.txt  109.txt  110.txt  113.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  124.txt  125.txt  126.txt  129.txt  130.txt  131.txt  133.txt  134.txt  135.txt  137.txt  138.txt  140.txt  142.txt  143.txt  145.txt  146.txt  147.txt  148.txt  149.txt  152.txt  155.txt  157.txt  159.txt  162.txt  (+133 more)
