[package]
name = "graph-reduction-evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.70"
petgraph = "0.6.3"
genevo = "0.7.1"